# AndroidAutomotive

./: LICENSE  README.md
00.LinuxAdmin/Session_4_Bash/: README.md  lab3
00.LinuxAdmin/Session_6/: Processes.md
01.ModernCpp/Session_2/: README.md
01.ModernCpp/Session_3/: README.md
01.ModernCpp/Session_6/: README.md
01.ModernCpp/Session_7/: output.txt
02.EmbeddedLinux/01.Static_Dynamic_Lib/: README.md
02.EmbeddedLinux/03.BootingSequence/: README.md
02.EmbeddedLinux/04.Bootloader/: README.md
02.EmbeddedLinux/05.Kernel/: README.md
02.EmbeddedLinux/06.BusyBox_SDCard/: README.md
02.EmbeddedLinux/08.Init_Process/: README.md
02.EmbeddedLinux/11.DeviceDrivers/: .modules.order.cmd  .simple_driver.ko.cmd  .simple_driver.mod.cmd  .simple_driver.mod.o.cmd  .simple_driver.o.cmd
02.EmbeddedLinux/12.SOME-IP/: README.md
02.EmbeddedLinux/LibrariesUsingCMAKE/calculator_Static/: CMakeLists.txt
03.LinuxDeviceDrivers/01.Hello/: .Module.symvers.cmd  .hello.o.cmd  .modules.order.cmd  Makefile  hello.mod.c
03.LinuxDeviceDrivers/02.ModuleParameters/: .Module.symvers.cmd  .modParam.ko.cmd  Makefile  README.md  modParam.c  modParam.mod.c  modules.order
03.LinuxDeviceDrivers/03.1.StaticMajorMinorNum/: .Module.symvers.cmd  .majorNumber.mod.o.cmd  .modules.order.cmd  Makefile  majorNumber.mod.c  modules.order
03.LinuxDeviceDrivers/03.2.DynamicMajorMinorNum/: .DynamicMajorNumber.ko.cmd  .DynamicMajorNumber.mod.o.cmd  .DynamicMajorNumber.o.cmd  (+5 more)
10.JavaNativeInterface(JNI)/: settings.gradle.kts
AndroidAutomotive/: Session2_Eng:Nour.md
LinuxDeviceDrivers/: README.md
(+928 files in other folders)
